--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Hotel Booking Application - Book rooms and manage reservations easily.">
+  <meta name="author" content="Your Name">
+  <meta name="keywords" content="Hotel Booking, Room Reservations, Hotel App">
   <title>Hotel Booking</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+  <!-- Add styles (optional) -->
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <noscript>
+    <strong>This application requires JavaScript to run. Please enable JavaScript in your browser.</strong>
+  </noscript>
   <div id="root"></div>
+
+  <!-- Bundle JavaScript -->
   <script src="/bundle.js"></script>
 </body>
 </html>
