--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,11 @@
   
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- Added Apple Touch Icon -->
 
   <!-- Add styles (optional) -->
   <link rel="stylesheet" href="/styles.css">
+  <link rel="manifest" href="/manifest.json"> <!-- Added PWA manifest -->
 </head>
 <body>
   <noscript>
@@ -23,5 +25,14 @@
 
   <!-- Bundle JavaScript -->
   <script src="/bundle.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js').then(() => {
+        console.log('Service Worker registered');
+      }).catch((err) => {
+        console.error('Service Worker registration failed:', err);
+      });
+    }
+  </script> <!-- Added Service Worker for PWA -->
 </body>
 </html>
